--- a/19_Members_Only/package.json
+++ b/19_Members_Only/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express-session": "^1.18.0",
     "@types/pg": "^8.11.6",
     "kysely-codegen": "^0.15.0",
@@ -21,6 +22,7 @@
     "@types/express": "^4.17.21",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
